# fed-learn-model

./: .gitignore  Cargo.toml  Enterprise_Federated_AI_Platform.md
config/: config.example.toml  credit_scoring.schema.json  fraud_detection.schema.json  install.sh  rust-client-daemon.service
coordinator/: .gitignore  AWS_DEPLOY.md  DAEMON_CONNECT.md  Dockerfile.coordinator  Dockerfile.setup  Federated_Learning_Coordinator_Final_Report.md  Makefile  docker-compose.yml  env.json  samconfig.toml  server.py  sgpgi_update.npy  template.yaml
coordinator/aggregation/: Dockerfile  aggregator.py  requirements.txt
coordinator/aggregation/tests/: test_aggregator.py
coordinator/lambdas/aggregation_trigger/: app.py
coordinator/lambdas/audit_query/: app.py
coordinator/lambdas/epoch_query/: app.py
coordinator/lambdas/health/: app.py
coordinator/lambdas/model_url/: app.py
coordinator/lambdas/shared/: audit.py  auth.py  dynamodb.py  requirements.txt  response.py  s3.py
coordinator/scripts/: activate_epoch.py  bootstrap.py  generate_ca.sh  generate_signing_key.py  issue_org_cert.sh  register_org.py  seed_epoch.py  upload_ca_bundle.sh
coordinator/tests/: conftest.py  helpers.py  requirements.txt  test_audit_chain.py  test_auth.py  test_epoch_lock.py  test_full_round.py  test_multikrum.py  test_s3_key_consistency.py
docs/: CONTRIBUTING.md  DEPLOYMENT.md  FL_CLIENT_CLI.md  README.md  SECURITY.md
src/: attestation.rs  audit.rs  certificates.rs  checkpoint.rs  config.rs  error.rs  lib.rs  main.rs  memory.rs  metrics.rs  model.rs  network.rs  privacy.rs  scheduler.rs  secureagg.rs  supply_chain.rs  time_sync.rs  training.rs  types.rs
src/cli/: args.rs  config_loader.rs  coordinator.rs  main.rs  menu.rs  output.rs  progress.rs  state.rs
src/cli/commands/: mod.rs  (+8 more)
src/config/: manager.rs
tests/: integration_test.rs
(+6 files in other folders)
